--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.4",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "expo-navigation-bar": "~4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
