--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "agrimodel-mobile-app": "file:",
     "expo": "~52.0.8",
     "expo-blur": "~14.0.1",
+    "expo-cli": "^6.3.12",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-image-picker": "~16.0.3",
+    "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
     "expo-localization": "~16.0.0",
     "expo-navigation-bar": "~4.0.3",
@@ -52,10 +55,10 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-svg": "^15.10.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.4",
-    "react-redux": "^9.1.2",
-    "expo-image-picker": "~16.0.3"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
