--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-linking": "~7.0.3",
     "expo-localization": "~16.0.0",
     "expo-navigation-bar": "~4.0.3",
+    "expo-permissions": "^14.4.0",
     "expo-router": "~4.0.7",
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
@@ -58,7 +59,8 @@
     "react-native-svg": "^15.10.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.4",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "expo-camera": "~16.0.16"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
