--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -23,10 +23,15 @@
     "@react-navigation/native": "^7.0.0",
     "@reduxjs/toolkit": "^2.3.0",
     "agrimodel-mobile-app": "file:",
+    "axios": "^1.7.9",
     "expo": "~52.0.8",
+    "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.1",
+    "expo-camera": "~16.0.16",
     "expo-cli": "^6.3.12",
     "expo-constants": "~17.0.3",
+    "expo-crypto": "~14.0.2",
+    "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-image-picker": "~16.0.3",
@@ -36,6 +41,7 @@
     "expo-navigation-bar": "~4.0.3",
     "expo-permissions": "^14.4.0",
     "expo-router": "~4.0.7",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
@@ -57,10 +63,10 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "^15.10.1",
+    "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.4",
-    "react-redux": "^9.1.2",
-    "expo-camera": "~16.0.16"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
