--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-image-picker": "~16.0.3",
-    "expo-linear-gradient": "^14.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
     "expo-localization": "~16.0.0",
     "expo-navigation-bar": "~4.0.3",
@@ -62,6 +62,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "^15.10.1",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
