--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
     "i18next": "^23.16.7",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.1.1",
