--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.4",
     "react-redux": "^9.1.2",
+    "socket.io-client": "^4.8.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
