--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-date-picker": "^5.0.7",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
