--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.7.9",
     "expo": "~52.0.8",
     "expo-auth-session": "~6.0.3",
+    "expo-av": "~15.0.2",
     "expo-blur": "~14.0.1",
     "expo-camera": "~16.0.16",
     "expo-cli": "^6.3.12",
