--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "react-native-webview": "13.12.4",
     "react-redux": "^9.1.2",
     "socket.io-client": "^4.8.1",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "expo-speech": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
