--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-EXPO_PUBLIC_BACKEND_URL=http://172.20.10.2:5000
+EXPO_PUBLIC_BACKEND_URL=http://192.168.1.24:5000
+# EXPO_PUBLIC_BACKEND_URL=http://172.20.10.2:5000
 EXPO_PUBLIC_WEATHER_API_KEY=bb1654c43d0049c98f3121019251802
